--- a/ImageLab09/index.html
+++ b/ImageLab09/index.html
@@ -9,8 +9,8 @@
       <a-sphere position="0 1.25 -5" radius="1.25" color="white"></a-sphere>
       <a-sphere position="0 3 -5" radius=".95" color="#fffff"></a-sphere>
       <a-sphere position="0 4 -5" radius=".75" color="#white"></a-sphere>
-      <a-sphere position=".5 4.1 -4.5" radius=".1" color="#ECECEC"></a-sphere>
-      <a-sphere position="-.5 4.1 -4.5" radius=".1" color="#ECECEC"></a-sphere>
+      <a-sphere position=".5 4.1 -4.5" radius=".1" color="#000000"></a-sphere>
+      <a-sphere position="-.5 4.1 -4.5" radius=".1" color="#000000"></a-sphere>
       <a-sphere position="0 3.5 -4.8" radius=".1" color="#ECECEC"></a-sphere>
       <a-sphere position="0 3.6 -4.8" radius=".1" color="#ECECEC"></a-sphere>
       <a-sphere position="0 3.7 -4.8" radius=".1" color="#ECECEC"></a-sphere>
