--- a/ImageLab11/index.html
+++ b/ImageLab11/index.html
@@ -5,11 +5,22 @@
   </head>
   <body>
     <a-scene>
-      <a-box position="-1 0.5 -3" rotation="0 45 0" color="#4CC3D9"></a-box>
-      <a-sphere position="0 1.25 -5" radius="1.25" color="#EF2D5E"></a-sphere>
+      <a-assets>
+        <img id="sky" src="assets/IMG_6073.jpg">
+        <img id="sand" src="assets/smooth-sand-1024x1024.jpg" >
+      </a-assets>
+      <a-box src="#sand" position="-1 0.5 -3" rotation="0 0 0" ></a-box>
+      <a-box src="#sand" position="0 0.5 -3" rotation="0 0 0" ></a-box>
+      <a-box src="#sand" position="-2 0.5 -3" rotation="0 0 0" ></a-box>
+      <a-cone src="#sand" position="-1 1.5 -3" radius-bottom="0.5"></a-cone>
+      <a-cone src="#sand" position="1 1.5 -3" radius-bottom="0.5"></a-cone>
+
+      
+      <!--<a-sphere position="0 1.25 -5" radius="1.25" color="#EF2D5E"></a-sphere>
       <a-cylinder position="1 0.75 -3" radius="0.5" height="1.5" color="#FFC65D"></a-cylinder>
       <a-plane position="0 0 -4" rotation="-90 0 0" width="4" height="4" color="#7BC8A4"></a-plane>
-      <a-sky color="#ECECEC"></a-sky>
+    -->
+      <a-sky src="#sky"></a-sky>
     </a-scene>
   </body>
 </html>
