--- a/ImageLab11/index.html
+++ b/ImageLab11/index.html
@@ -8,12 +8,14 @@
       <a-assets>
         <img id="sky" src="assets/IMG_6073.jpg">
         <img id="sand" src="assets/smooth-sand-1024x1024.jpg" >
+        <img id ="cone" src="assets/360_F_292698257_BS8D9jRyrHKSFxMS7CyOHFv40DnlbRYd.jpg">
       </a-assets>
       <a-box src="#sand" position="-1 0.5 -3" rotation="0 0 0" ></a-box>
       <a-box src="#sand" position="0 0.5 -3" rotation="0 0 0" ></a-box>
       <a-box src="#sand" position="-2 0.5 -3" rotation="0 0 0" ></a-box>
       <a-cone src="#sand" position="-1 1.5 -3" radius-bottom="0.5"></a-cone>
-      <a-cone src="#sand" position="1 1.5 -3" radius-bottom="0.5"></a-cone>
+      <a-cone src="#cone" position="2 1.5 -3" radius-bottom="0" radius-top="0.5"></a-cone>
+      <a-sphere position="2 2 -3" radius="0.4"></a-sphere>
 
       
       <!--<a-sphere position="0 1.25 -5" radius="1.25" color="#EF2D5E"></a-sphere>
