--- a/ImageProject-03/index.html
+++ b/ImageProject-03/index.html
@@ -4,12 +4,21 @@
     <script src="https://aframe.io/releases/1.7.1/aframe.min.js"> </script>
   </head>
   <body>
+    <a-assets>
+      <img id="sky" src="assets/AdobeStock_493110643.jpeg">
+      <a-asset-item id="cabin" src="assets/Log_Cabin.stl.obj"></a-asset-item>
+      <a-asset-item id="box-bear" src="assets/KUMATY_Gift_box.stl.obj"></a-asset-item>
+      <a-asset-item id="sweater-bear" src="assets/KUMATY_Sweater.stl.obj"></a-asset-item>
+      <a-asset-item id="hat-bear" src="assets/KUMATY_Winter_hat__mitten.stl.obj"></a-asset-item>
+      <a-asset-item id="fire-pit" src="assets/fireinpit.stl.obj"></a-asset-item>
+    </a-assets>
     <a-scene>
-      <a-box position="-1 0.5 -3" rotation="0 45 0" color="#4CC3D9"></a-box>
-      <a-sphere position="0 1.25 -5" radius="1.25" color="#EF2D5E"></a-sphere>
-      <a-cylinder position="1 0.75 -3" radius="0.5" height="1.5" color="#FFC65D"></a-cylinder>
-      <a-plane position="0 0 -4" rotation="-90 0 0" width="4" height="4" color="#7BC8A4"></a-plane>
-      <a-sky color="#ECECEC"></a-sky>
+      <a-plane position="0 0 -4" rotation="-90 0 0" width="100" height="100" color="white"></a-plane>
+      <a-obj-model src="#cabin" position="0 0 -4" rotation="-90 0 0" scale="0.5 0.5 0.5"></a-obj-model>
+      <a-obj-model src="#hat-bear" position="-3 0 -1" rotation="-90 45 0" scale="0.05 0.05 0.05"></a-obj-model>
+      <a-obj-model src="#sweater-bear" position="-1 0 -1" rotation="-90 -45 0" scale="0.05 0.05 0.05"></a-obj-model>
+      <a-obj-model src="#fire-pit" position="-2 0 0" rotation="-90 0 0" scale=".5 .5 .5"></a-obj-model>
+      <a-sky src="#sky"></a-sky>
     </a-scene>
   </body>
 </html>
