--- a/ImageProject-03/index.html
+++ b/ImageProject-03/index.html
@@ -6,6 +6,10 @@
   <body>
     <a-assets>
       <img id="sky" src="assets/AdobeStock_493110643.jpeg">
+      <img id="log" src="assets/logtexture.jpg">
+      <img id="snow" src="assets/snow textrue.jpg">
+      <img id="fur" src="assets/beartex.jpg">
+
       <a-asset-item id="cabin" src="assets/Log_Cabin.stl.obj"></a-asset-item>
       <a-asset-item id="box-bear" src="assets/KUMATY_Gift_box.stl.obj"></a-asset-item>
       <a-asset-item id="sweater-bear" src="assets/KUMATY_Sweater.stl.obj"></a-asset-item>
@@ -13,11 +17,17 @@
       <a-asset-item id="fire-pit" src="assets/fireinpit.stl.obj"></a-asset-item>
     </a-assets>
     <a-scene>
-      <a-plane position="0 0 -4" rotation="-90 0 0" width="100" height="100" color="white"></a-plane>
-      <a-obj-model src="#cabin" position="0 0 -4" rotation="-90 0 0" scale="0.5 0.5 0.5"></a-obj-model>
-      <a-obj-model src="#hat-bear" position="-3 0 -1" rotation="-90 45 0" scale="0.05 0.05 0.05"></a-obj-model>
-      <a-obj-model src="#sweater-bear" position="-1 0 -1" rotation="-90 -45 0" scale="0.05 0.05 0.05"></a-obj-model>
+      <a-plane src="#snow" position="0 0 -4" rotation="-90 0 0" width="100" height="100" color="white"></a-plane>
+      <a-obj-model src="#cabin" material="src: #log" position="0 0 -4" rotation="-90 0 0" scale="0.5 0.5 0.5"></a-obj-model>
+      <a-obj-model material="src: #fur" src="#hat-bear" position="-3 0 -1" rotation="-90 45 0" scale="0.05 0.05 0.05"></a-obj-model>
+      <a-obj-model material="src: #fur"src="#sweater-bear" position="-1 0 -1" rotation="-90 -45 0" scale="0.05 0.05 0.05"></a-obj-model>
       <a-obj-model src="#fire-pit" position="-2 0 0" rotation="-90 0 0" scale=".5 .5 .5"></a-obj-model>
+      <a-sphere position="-2.911 2.324  -0.543" radius=".04" color="black"></a-sphere> 
+      <a-sphere position="-2.911 2.324  -1.543" radius=".04" color="black"></a-sphere>
+      <a-sphere position="-2.911 2.324  -1.543" radius=".04" color="black"></a-sphere>
+      <a-sphere position="-2.911 2.324  -1.543" radius=".04" color="black"></a-sphere>
+      <a-sphere position="-2.911 2.324  -1.543" radius=".04" color="black"></a-sphere>
+      <a-sphere position="-2.911 2.324  -1.543" radius=".04" color="black"></a-sphere> 
       <a-sky src="#sky"></a-sky>
     </a-scene>
   </body>
